--- a/public/style.css
+++ b/public/style.css
@@ -8,15 +8,16 @@
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
-  background-color: #c8c8c8;
+  background-color: #282828;
 }
 
 h1 {
-  color: #6f6f6f;
+  font-size: 2.5em;
+  color: #d6d6d6;
 }
 
 h3 {
-  color: #666;
+  color: #d6d6d6;
 }
 
 .bold {
@@ -25,6 +26,10 @@ h3 {
 
 p {
   max-width: 600px;
+}
+
+footer {
+ color: white; 
 }
 
 form {
@@ -75,19 +80,11 @@ footer {
 
 /* custom classes for demo */
 
-pre {
-  white-space: pre-wrap;       /* css-3 */
-  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-  white-space: -pre-wrap;      /* Opera 4-6 */
-  white-space: -o-pre-wrap;    /* Opera 7 */
-  word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
 .logViewerContainer {
-  height: 95%;
-  min-height: 900px;
+  height: 90%;
+  min-height: 600px;
   width: 100%;
-  background: #c6c6c6;
+  background: #282828;
   page-break-inside: avoid;
   line-height: 1.3;
   margin-bottom: 1.6em;
@@ -104,7 +101,7 @@ pre {
   padding: .5em;
   background: #d6d6d6;
   border: 1px solid #666;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 
 .logTimestamp {
@@ -144,9 +141,37 @@ pre {
 }
 
 /* JSON data */
-pre {outline: 1px solid #ccc; padding: 5px; margin: 5px; }
+pre {
+  outline: 1px solid #ccc; padding: 5px; margin: 5px; }
   .string { color: #273a40; }
   .number { color: #af2929; }
   .boolean { color: blue; }
   .null { color: magenta; }
   .key { color: #583c96; }
+
+
+pre {
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
+.link {
+  color: #dc41ff; 
+}
+
+.intro {
+  color: #dfdfdf;
+  margin-bottom: 20px;
+}
+
+.instructions {
+  color: #a8a8df;
+  margin-bottom: 5px;
+}
+
+.logo {
+  height: 60px;
+}
