📈☕️ Updated with Glitch - support for new endpoint and contract

--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
     <image class="logo" src="https://cdn.glitch.com/45b751fc-c842-4622-b9ef-32cc719d16b9%2FOkta_Logo_White_Small.png?1545847053479"/>
     
     <h1>
-      Hooks Demo
+      Hooks Demo Platform
     </h1>
 
     <!-- load up the socket.io library -->
